{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 101,
  "lineage": "e50a88f6-4aae-8f04-a868-6fe9d83169c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mobikart-NAT-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06de3eb8cadc31e2f",
            "domain": "vpc",
            "id": "eipalloc-06de3eb8cadc31e2f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-204-248-107.compute-1.amazonaws.com",
            "public_ip": "18.204.248.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mobikart-NAT-EIP"
            },
            "tags_all": {
              "Name": "mobikart-NAT-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mobikart-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402969984062:internet-gateway/igw-00f67179c69c045b9",
            "id": "igw-00f67179c69c045b9",
            "owner_id": "402969984062",
            "tags": {
              "Name": "mobikart-IGW"
            },
            "tags_all": {
              "Name": "mobikart-IGW"
            },
            "vpc_id": "vpc-02308c12b390f0838"
          },
          "dependencies": [
            "aws_vpc.mobikart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mobikart-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06de3eb8cadc31e2f",
            "connectivity_type": "public",
            "id": "nat-00bfb8f9f3d55087f",
            "network_interface_id": "eni-00c1c64b310269622",
            "private_ip": "10.0.0.237",
            "public_ip": "18.204.248.107",
            "subnet_id": "subnet-08a3a9e5db70900ed",
            "tags": {
              "Name": "mobikart-NAT"
            },
            "tags_all": {
              "Name": "mobikart-NAT"
            }
          },
          "dependencies": [
            "aws_eip.mobikart-NAT-EIP",
            "aws_subnet.public-mobikart-SN",
            "aws_vpc.mobikart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-mobikart-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402969984062:route-table/rtb-0c6fc7ae93da96ef4",
            "id": "rtb-0c6fc7ae93da96ef4",
            "owner_id": "402969984062",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00bfb8f9f3d55087f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-mobikart-RT"
            },
            "tags_all": {
              "Name": "private-mobikart-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02308c12b390f0838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mobikart-NAT-EIP",
            "aws_nat_gateway.mobikart-NAT",
            "aws_subnet.public-mobikart-SN",
            "aws_vpc.mobikart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-mobikart-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402969984062:route-table/rtb-0266f2f79d214ef01",
            "id": "rtb-0266f2f79d214ef01",
            "owner_id": "402969984062",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f67179c69c045b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-mobikart-RT"
            },
            "tags_all": {
              "Name": "public-mobikart-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02308c12b390f0838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mobikart-IGW",
            "aws_vpc.mobikart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-mobikart-SN1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042dc91ec18168344",
            "route_table_id": "rtb-0c6fc7ae93da96ef4",
            "subnet_id": "subnet-0cc1477d29c1b3e61"
          },
          "dependencies": [
            "aws_eip.mobikart-NAT-EIP",
            "aws_nat_gateway.mobikart-NAT",
            "aws_route_table.private-mobikart-RT",
            "aws_subnet.private-mobikart-SN1",
            "aws_subnet.public-mobikart-SN",
            "aws_vpc.mobikart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-mobikart-SN2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f40e278a2370e2a",
            "route_table_id": "rtb-0c6fc7ae93da96ef4",
            "subnet_id": "subnet-0e0dbea785c7dd3fa"
          },
          "dependencies": [
            "aws_eip.mobikart-NAT-EIP",
            "aws_nat_gateway.mobikart-NAT",
            "aws_route_table.private-mobikart-RT",
            "aws_subnet.private-mobikart-SN2",
            "aws_subnet.public-mobikart-SN",
            "aws_vpc.mobikart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-mobikart-SN-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca0164a338d24033",
            "route_table_id": "rtb-0266f2f79d214ef01",
            "subnet_id": "subnet-08a3a9e5db70900ed"
          },
          "dependencies": [
            "aws_internet_gateway.mobikart-IGW",
            "aws_route_table.public-mobikart-RT",
            "aws_subnet.public-mobikart-SN",
            "aws_vpc.mobikart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-mobikart-SN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402969984062:subnet/subnet-0cc1477d29c1b3e61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc1477d29c1b3e61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "402969984062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-mobikart-SN1"
            },
            "tags_all": {
              "Name": "private-mobikart-SN1"
            },
            "vpc_id": "vpc-02308c12b390f0838"
          },
          "dependencies": [
            "aws_vpc.mobikart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-mobikart-SN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402969984062:subnet/subnet-0e0dbea785c7dd3fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0dbea785c7dd3fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "402969984062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-mobikart-SN2"
            },
            "tags_all": {
              "Name": "private-mobikart-SN2"
            },
            "vpc_id": "vpc-02308c12b390f0838"
          },
          "dependencies": [
            "aws_vpc.mobikart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-mobikart-SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402969984062:subnet/subnet-08a3a9e5db70900ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a3a9e5db70900ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "402969984062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-mobikart-SN"
            },
            "tags_all": {
              "Name": "public-mobikart-SN"
            },
            "vpc_id": "vpc-02308c12b390f0838"
          },
          "dependencies": [
            "aws_vpc.mobikart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mobikart-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402969984062:vpc/vpc-02308c12b390f0838",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6f726fc372eaf62",
            "default_route_table_id": "rtb-0d3926667534ea81f",
            "default_security_group_id": "sg-03d0b007e04165db5",
            "dhcp_options_id": "dopt-00a639c51d81e705a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02308c12b390f0838",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3926667534ea81f",
            "owner_id": "402969984062",
            "tags": {
              "Name": "mobikart-vpc"
            },
            "tags_all": {
              "Name": "mobikart-vpc"
            }
          }
        }
      ]
    }
  ]
}